--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ html {
   align-items: center;
 
   opacity: 0;
-  transition: color 0.3s,opacity .2s;
+  transition: color 0.3s, opacity 0.2s;
 }
 .change .navbar-link {
   opacity: 1;
@@ -114,6 +114,8 @@ html {
   border-radius: 30rem 30rem 15rem 15rem;
   box-shadow: 0.1rem 0.1rem 0.1rem #000, -0.1rem -0.1rem 0.1rem #000;
   cursor: pointer;
+  z-index: 100;
+
   transition: top 0.4s 0.2s;
 }
 .menu.change {
@@ -417,3 +419,101 @@ html {
 }
 
 /* End of Section-4 */
+
+/* Responsive */
+@media (max-width: 1400px) {
+  html {
+    font-size: 50%;
+  }
+  .section-2 {
+    height: auto;
+    padding: 10rem 0 12rem 0;
+  }
+  .cards-container {
+    margin-top: 10rem;
+  }
+  .gallery-link {
+    width: 40rem;
+    height: 25rem;
+    margin: 5rem;
+  }
+  .food-img {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+@media (max-width:1000px){
+  .section-heading{
+    font-size: 9rem;
+    margin: 0 5rem;
+  }
+  .section-1-icons{
+    font-size: 25rem;
+
+
+  }
+  .cards-container{
+    flex-wrap: wrap;
+  }
+  .cards{
+    margin: 5rem;
+  }
+  .section-4{
+    height: 30rem;
+
+  }
+
+}
+@media (max-width:900px){
+  .navbar-link{
+    margin: 2rem;
+  }
+  .navbar-link i{
+    font-size: 4rem;
+
+  }
+  .navbar-link span{
+    font-size: 2rem;
+
+  }
+}
+@media (max-width:700px){
+  .section-heading{
+    font-size: 7rem;
+    margin: 0 10rem;
+  }
+  .section-1-icons{
+    font-size:20rem ;
+  }
+  .menu{
+    left: 2rem;
+
+  }
+  .section-4{
+    height: 40rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+  }
+  .section-4-text{
+    margin-top: 8rem;
+
+  }
+
+}
+
+@media (max-width:550px) {
+  html{
+    font-size: 40%;
+  }
+  .navbar-link{
+    margin: 0 0.7rem;
+
+  }
+
+  
+}
+
+/* End of Responsive */
